spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_definition_of_decl_triggers_errors.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: x was already defined
  ┌─ testinput:4:9
  │
2 │     decl x;
  │          - x declared here
3 │     let x = 0;
  │         - First defined here
4 │     let x = 1;
  │         ^ Later defined here
  │
  = note: Declared variables can only be defined once


